--- a/src/config.json
+++ b/src/config.json
@@ -16,7 +16,8 @@
       "getCustomerById": "api/customer/customer/"
     },
     "montages": {
-      "getMontagesByCustomerId": "api/montage/by-customer/"
+      "getMontagesByCustomerId": "api/montage/by-customer/",
+      "reorderMontageById": "api/montage/reorder/"
     },
     "orders": {
       "getOrdersByMontageId": "api/order/by-montage/"
