--- a/src/config.json
+++ b/src/config.json
@@ -22,7 +22,7 @@
     "orders": {
       "getPackedOrders": "api/order/get-packed-orders",
       "getUnPackedOrders": "api/order/get-unpacked-orders",
-      "packOrder": "api/order/update-unpacked-orders/"
+      "packOrder": "api/order/update-unpacked-orders/",
       "getOrdersByMontageId": "api/order/by-montage/"
     }
   }
