--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "host": {
     "protocol": "http",
-    "host": "192.168.1.14",
+    "host": "192.168.1.12",
     "port": "8000"
   },
   "services": {
@@ -18,7 +18,8 @@
     },
     "montages": {
       "getMontagesByCustomerId": "api/montage/by-customer/",
-      "reorderMontageById": "api/montage/reorder/"
+      "reorderMontageById": "api/montage/reorder/",
+      "newMontage": "api/montage/create-montage/"
     },
     "orders": {
       "getPackedOrders": "api/order/get-packed-orders",
