--- a/src/config.json
+++ b/src/config.json
@@ -28,7 +28,8 @@
       "getUnPackedOrders": "api/order/get-unpacked-orders",
       "packOrder": "api/order/update-unpacked-orders/",
       "getOrdersByMontageId": "api/order/by-montage/",
-      "deliverPackedOrder": "api/order/delivered/"
+      "deliverPackedOrder": "api/order/delivered/",
+      "newOrder": "api/order/create-order"
     }
   }
 }
