--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "host": {
     "protocol": "http",
-    "host": "192.168.1.14",
+    "host": "192.168.1.13",
     "port": "8000"
   },
   "services": {
@@ -29,7 +29,7 @@
       "packOrder": "api/order/update-unpacked-orders/",
       "getOrdersByMontageId": "api/order/by-montage/",
       "deliverPackedOrder": "api/order/delivered/",
-      "newOrder": "api/order/create-order"
+      "newOrder": "api/order/create-order/"
     }
   }
 }
