--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
   "host": {
     "protocol": "http",
-    "host": "192.168.1.13",
-    "port": "8000"
+    "host": "https://glacial-eyrie-43651.herokuapp.com",
+    "port": "443"
   },
   "services": {
     "general": {
